versioned_docs/version-4.14.0/api/1_wrapper/getstoredanonymousid.md
# GetStoredAnonymousId
## Overview
Returns the stored anonymous ID

## Usage

```mdx-code-block
<BrowserWindow>
<Tabs>
<TabItem value="csharp" label="C#">
```

```csharp


string anonymousId = <%= data.branding.codePrefix %>.GetStoredAnonymousId();
```

```mdx-code-block
</TabItem>
<TabItem value="cpp" label="C++">
```

```cpp
std::string anonymousId = <%= data.branding.codePrefix %>->getStoredAnonymousId();
```

```mdx-code-block
</TabItem>
<TabItem value="objectivec" label="Objective-C">
```

```objectivec
NSString* anonymousId = [<%= data.branding.codePrefix %> getStoredAnonymousId];
```

```mdx-code-block
</TabItem>
<TabItem value="java" label="Java">
```

```java
String id = <%= data.branding.codePrefix %>.getStoredAnonymousId();
```

```mdx-code-block
</TabItem>
<TabItem value="js" label="JavaScript">
```

```javascript
var anonymousId = <%= data.branding.codePrefix %>.getStoredAnonymousId();
```

```mdx-code-block
</TabItem>
<TabItem value="cfs" label="Cloud Code">
```

```javascript
var anonymousId = <%= data.branding.codePrefix %>.getStoredAnonymousId();
```

```mdx-code-block
</TabItem>
<TabItem value="r" label="Raw">
```

```javascript
var anonymousId = <%= data.branding.codePrefix %>.getStoredAnonymousId();
```

```mdx-code-block
</TabItem>
</Tabs>
</BrowserWindow>
```

<details>
<summary>JSON Response</summary>

```javascript
var anonymousId = <%= data.branding.codePrefix %>.getStoredAnonymousId();
```
</details>

