versioned_docs/version-6.0.0/api/1_wrapper/getstoredanonymousid.md
# GetStoredAnonymousId

Returns the stored anonymous ID

## Usage

```mdx-code-block
<BrowserWindow>
<Tabs>
<TabItem value="csharp" label="C#">
```

```csharp


string anonymousId = <%= data.branding.codePrefix %>.GetStoredAnonymousId();
```

```mdx-code-block
</TabItem>
<TabItem value="cpp" label="C++">
```

```cpp
std::string anonymousId = <%= data.branding.codePrefix %>->getStoredAnonymousId();
```

```mdx-code-block
</TabItem>
<TabItem value="objectivec" label="Obj-C">
```

```objectivec
NSString* anonymousId = [<%= data.branding.codePrefix %> getStoredAnonymousId];
```

```mdx-code-block
</TabItem>
<TabItem value="java" label="Java">
```

```java
String id = <%= data.branding.codePrefix %>.getStoredAnonymousId();
```

```mdx-code-block
</TabItem>
<TabItem value="js" label="JavaScript">
```

```javascript
var anonymousId = <%= data.branding.codePrefix %>.getStoredAnonymousId();
```

```mdx-code-block
</TabItem>
<TabItem value="dart" label="Dart">
```

```dart
String anonymousId = <%= data.branding.codePrefix %>.getStoredAnonymousId();
```

```mdx-code-block
</TabItem>
<TabItem value="roblox" label="Roblox">
```

```lua
local anonymousId = <%= data.branding.codePrefix %>:getStoredAnonymousId()
```

```mdx-code-block
</TabItem>
<TabItem value="gdscript" label="GDScript">
```

```gdscript
var result = await <%= data.branding.codePrefix %>.get_stored_anonymous_id()

if result.status == 200:
	print("Success")
else:
	print("Failed: %s" % result.status_message)
```

```mdx-code-block
</TabItem>
<TabItem value="cfs" label="Cloud Code">
```

```cfscript
// N/A
```

```mdx-code-block
</TabItem>
<TabItem value="r" label="Raw">
```

```r
// N/A
```

```mdx-code-block
</TabItem>
</Tabs>
</BrowserWindow>
```

<details>
<summary>JSON Response</summary>

```json
var anonymousId = <%= data.branding.codePrefix %>.getStoredAnonymousId();
```
</details>

